fix: several small UI fixes (#380)
fix: display the label consistently over namedocs headers

fix: overflowing code examples, IO

fix: centralize warning color

fix: make example header fully clickable

Examples were only clickable on the line of the text. Now the whole
header is clickable.

fix: increase side margin for marginalia on medium screens

---------

--- a/static/theme.css
+++ b/static/theme.css
@@ -110,7 +110,7 @@ figcaption {
 
 /* Different color for warning */
 .warning pre, .warning code {
-    border-color: #efd871;
+    border-color: var(--verso-warning-color);
 }
 
 /* Different color for information */
